--- a/output.css
+++ b/output.css
@@ -14,83 +14,85 @@ body {
   width: 100%;
   margin: 2rem 0;
 }
-body header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+body .main-content {
+  max-width: 1120px;
+}
+body .main-content header {
   color: hsl(234, 12%, 34%);
-  width: 540px;
   padding-bottom: 3rem;
   text-align: center;
 }
-body header .heading h1 {
+body .main-content header .heading h1 {
   font-weight: 300;
   margin-bottom: -0.8rem;
 }
-body header .heading h2 {
+body .main-content header .heading h2 {
   font-size: 2rem;
   padding-bottom: 1rem;
 }
-body section.parent {
-  display: flex;
+body .main-content header .description {
+  max-width: 540px;
+  margin: 0 auto;
+}
+body .main-content section.parent {
+  display: grid;
   align-items: center;
   gap: 1.5rem;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-areas: "c1 c2 c4" "c1 c3 c4";
 }
-body section.parent .card {
+body .main-content section.parent .card {
   position: relative;
   border-radius: 0.8rem;
   padding: 1.5rem;
-  width: 350px;
-  height: 250px;
+  max-width: 350px;
+  min-height: 220px;
   background-color: hsl(0, 0%, 98%);
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 }
-body section.parent .card p {
+body .main-content section.parent .card p {
   color: hsl(229, 6%, 66%);
   font-size: 14px;
 }
-body section.parent .card img {
+body .main-content section.parent .card img {
   position: absolute;
   bottom: 1.5rem;
   right: 1.5rem;
 }
-body section.parent .card:nth-child(1) {
-  margin-bottom: 1.5rem;
-}
-body section.parent #card_1 {
+body .main-content section.parent #card_1 {
   border-top: 0.2rem solid hsl(180, 62%, 55%);
+  grid-area: c1;
 }
-body section.parent #card_2 {
+body .main-content section.parent #card_2 {
   border-top: 0.2rem solid hsl(0, 78%, 62%);
+  grid-area: c2;
 }
-body section.parent #card_3 {
+body .main-content section.parent #card_3 {
   border-top: 0.2rem solid hsl(34, 97%, 64%);
+  grid-area: c3;
 }
-body section.parent #card_4 {
+body .main-content section.parent #card_4 {
   border-top: 0.2rem solid hsl(212, 86%, 64%);
+  grid-area: c4;
 }
 
 @media only screen and (max-width: 1000px) {
-  body {
+  body .main-content {
     display: block;
     margin-bottom: 2rem;
   }
-  body header {
+  body .main-content header {
     width: 400px;
     margin: 0 auto;
     padding-top: 3.5rem;
     text-align: center;
   }
-  body section.parent {
-    display: flex;
-    flex-direction: column;
+  body .main-content section.parent {
+    display: grid;
+    grid-template-columns: 1fr;
     padding: 2rem 0 3rem;
-  }
-  body section.parent .card {
-    width: 400px;
-  }
-  body section.parent .card:nth-child(1) {
-    margin-top: -1.5rem;
+    grid-template-areas: "c1" "c2" "c3" "c4";
+    justify-items: center;
   }
 }
 
